--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
         </header>
         
         <footer class="calculator--app--buttons">
-          <button type="button">C</button>
-          <button type="button">+/-</button>
-          <button type="button">()</button>
-          <button type="button">÷</button>
-          <button type="button">1</button>
-          <button type="button">2</button>
-          <button type="button">3</button>
-          <button type="button">×</button>
-          <button type="button">4</button>
-          <button type="button">5</button>
-          <button type="button">6</button>
-          <button type="button">-</button>
-          <button type="button">7</button>
-          <button type="button">8</button>
-          <button type="button">9</button>
-          <button type="button">+</button>
+          <button type="button" data-key="c">C</button>
+          <button type="button" data-key="+/-">+/-</button>
+          <button type="button" data-key="()">()</button>
+          <button type="button" data-key="÷">÷</button>
+          <button type="button" data-key="1">1</button>
+          <button type="button" data-key="2">2</button>
+          <button type="button" data-key="3">3</button>
+          <button type="button" data-key="×">×</button>
+          <button type="button" data-key="4">4</button>
+          <button type="button" data-key="5">5</button>
+          <button type="button" data-key="6">6</button>
+          <button type="button" data-key="-">-</button>
+          <button type="button" data-key="7">7</button>
+          <button type="button" data-key="8">8</button>
+          <button type="button" data-key="9">9</button>
+          <button type="button" data-key="+">+</button>
+          <button type="button" data-key=".">.</button>
           <button type="button" data-key="0">0</button>
-          <button type="button">.</button>
           <button type="button" data-key="=">=</button>
         </footer>
       </div>
