--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
+  <script src="calculator.js" type="text/javascript" defer></script>
 </head>
 
 <body>
