prepare calculator methods

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       
       <div class="calculator--app">
         <header>
-          <small data-sub>0</small>
-          <strong data-result>0</strong>
+          <b data-sub></b>
+          <strong data-result></strong>
         </header>
         
         <footer class="calculator--app--buttons">
