add backspace button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <button type="button" data-key="+">+</button>
           <button type="button" data-key=".">.</button>
           <button type="button" data-key="0">0</button>
+          <button type="button" data-key="<-">&#8701;</button>
           <button type="button" data-key="=">=</button>
         </footer>
       </div>
