add support of dark & light theme

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <h1>Vanilla calculator</h1>
     <section class="calculator">
       <aside class="calculator--theme">
-        <button class="calculator--theme--light" data-theme="light"></button>
-        <button class="calculator--theme--dark" data-theme="dark"></button>
+        <button type="button" class="calculator--theme--light" data-theme="light">
+          <img src="icons/sun.svg" width="20" height="20" />
+        </button>
+        <button type="button" class="calculator--theme--dark" data-theme="dark"><img src="icons/moon.svg" width="20" height="20" /></button>
       </aside>
 
       <div class="calculator--app">
