add keyboard keys for switching theme

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       <div class="calculator--app">
         <header>
           <aside class="calculator--app--theme">
-            <button type="button" class="calculator--theme--light" data-theme="light">
+            <button type="button" class="calculator--theme--light" data-theme="light" title="Light (l)">
               <img src="icons/sun.svg" width="20" height="20" />
             </button>
-            <button type="button" class="calculator--theme--dark" data-theme="dark"><img src="icons/moon.svg" width="20" height="20" /></button>
+            <button type="button" class="calculator--theme--dark" data-theme="dark" title="Dark (d)">
+              <img src="icons/moon.svg" width="20" height="20" />
+            </button>
           </aside>
 
           <div class="calculator--app--result">
